<resources>
    <string name="app_name">Hero Spin</string>

    <!-- marvel keys -->
    <string name="marvelPublicKey">67048a9b884af212b62f905ad953d5bc</string>
    <string name="marvelPrivateKey">40c210605c45ac486386d30cd58d744934e959eb</string>

    <string name="imageNotAvailable">image_not_available</string>

    <!-- movie pick page -->
    <string name="fetchIntro">Not sure which Superhero Movie to watch? Choose an option below.</string>
    <string name="chooseOption">Choose one of the two options to start.</string>
    <string name="fetchSuperHero">A SuperHero in on the way. Please wait&#8230;</string>
    <string name="fetchMovie">A Movie is coming. Please wait&#8230;</string>
    <string name="anyMovie">Random Movie</string>
    <string name="selectHero">Select Hero</string>
    <string name="moreHeroes">Click for More Heroes</string>
    <string name="moviePicker">Superhero Movie Spin</string>
    <string name="movieNotFound">Movie not found!</string>

    <!-- movie details page -->
    <string name="actors">Actors</string>
    <string name="genre">Genre</string>
    <string name="language">language</string>
    <string name="imdbRating">Imdb</string>
    <string name="year">Year</string>
    <string name="movieDetails">Movie Details</string>
    <string name="noMovieTitle">Movie not found</string>
    <string name="noMovieDescription">It seems the SuperHero is taking a break.</string>
    <string name="tryAgain">Try other heroes instead.</string>
    <string name="noMovieTryAgain">Sorry. No movie found for this Hero.</string>
    <string name="startOver">Start Over</string>

    <!-- hero list page -->
    <string name="cancel">Cancel</string>
    <string name="searchHeroes">Search Hero</string>

    <!-- hero list page -->
    <string name="connectionError">Connection Error. Please check your network.</string>
    <string name="connectionTimeout">Connection Timeout. Please try later.</string>

</resources>
