<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/coordinatorLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_collapseMode="parallax"
                    app:layout_collapseParallaxMultiplier="0.5">

                    <ImageView
                        android:id="@+id/poster"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:adjustViewBounds="true"
                        android:visibility="visible" />
                </RelativeLayout>

                <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:layout_gravity="bottom"
                    android:textAlignment="center"
                    app:contentInsetEnd="0dp"
                    app:contentInsetLeft="0dp"
                    app:contentInsetRight="0dp"
                    app:contentInsetStart="0dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="0dp"
                        android:layout_marginLeft="0dp"
                        android:layout_marginRight="0dp"
                        android:layout_marginTop="0dp">

                        <ImageView
                            android:id="@+id/btnPlayTop"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:layout_marginBottom="2dp"
                            android:layout_marginRight="16dp"
                            android:layout_marginTop="2dp"
                            android:src="@drawable/ic_spin_small" />

                        <TextView
                            android:id="@+id/title"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_alignParentBottom="true"
                            android:background="@android:color/black"
                            android:gravity="center_vertical"
                            android:paddingLeft="35dp"
                            android:paddingRight="16dp"
                            android:singleLine="true"
                            android:textColor="@android:color/white"
                            android:textSize="18sp" />
                    </RelativeLayout>
                </android.support.v7.widget.Toolbar>
            </android.support.design.widget.CollapsingToolbarLayout>
        </android.support.design.widget.AppBarLayout>

        <android.support.v4.widget.NestedScrollView
            android:id="@+id/scroll"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:paddingBottom="55dp"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:id="@+id/detailsContainer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="50dp"
                android:orientation="vertical">

                <RelativeLayout
                    android:id="@+id/posterFooter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:layout_marginTop="32dp"
                    android:orientation="vertical"
                    android:tag="sticky">

                    <LinearLayout
                        android:id="@+id/btnGroup"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <View
                            android:layout_width="1dp"
                            android:layout_height="match_parent"
                            android:background="#e1e1e1" />

                        <RelativeLayout
                            android:id="@+id/btnCharacter"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center">

                            <ImageView
                                android:id="@+id/heroImage"
                                android:layout_width="80dp"
                                android:layout_height="80dp"
                                android:src="@drawable/spider" />

                            <TextView
                                android:id="@+id/heroName"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@+id/heroImage"
                                android:paddingBottom="8dp"
                                android:paddingTop="8dp"
                                android:textSize="13sp" />
                        </RelativeLayout>

                        <View
                            android:layout_width="1dp"
                            android:layout_height="match_parent"
                            android:background="#e1e1e1" />

                        <RelativeLayout
                            android:id="@+id/btnHome"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center">

                            <ImageView
                                android:id="@+id/homeImage"
                                android:layout_width="70dp"
                                android:layout_height="70dp"
                                android:src="@drawable/ic_menu_home" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@+id/homeImage"
                                android:paddingBottom="8dp"
                                android:paddingTop="8dp"
                                android:text="Home"
                                android:textSize="13sp" />
                        </RelativeLayout>
                    </LinearLayout>
                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="@dimen/default_margin"
                        android:layout_marginRight="@dimen/default_margin"
                        android:orientation="horizontal"
                        android:paddingBottom="@dimen/default_margin_half"
                        android:paddingTop="@dimen/default_margin_half">

                        <TextView
                            android:layout_width="80dp"
                            android:layout_height="wrap_content"
                            android:text="@string/actors"
                            android:textColor="@color/darkPrimary"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/actors"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/darkPrimary" />
                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="@dimen/default_margin"
                        android:layout_marginRight="@dimen/default_margin"
                        android:orientation="horizontal"
                        android:paddingBottom="@dimen/default_margin_half"
                        android:paddingTop="@dimen/default_margin_half">

                        <TextView
                            android:layout_width="80dp"
                            android:layout_height="wrap_content"
                            android:text="@string/genre"
                            android:textColor="@color/darkPrimary"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/genre"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/darkPrimary" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="@dimen/default_margin"
                        android:layout_marginRight="@dimen/default_margin"
                        android:orientation="horizontal"
                        android:paddingBottom="@dimen/default_margin_half"
                        android:paddingTop="@dimen/default_margin_half">

                        <TextView
                            android:layout_width="80dp"
                            android:layout_height="wrap_content"
                            android:text="@string/language"
                            android:textColor="@color/darkPrimary"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/language"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/darkPrimary" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="@dimen/default_margin"
                        android:layout_marginRight="@dimen/default_margin"
                        android:orientation="horizontal"
                        android:paddingBottom="@dimen/default_margin_half"
                        android:paddingTop="@dimen/default_margin_half">

                        <TextView
                            android:layout_width="80dp"
                            android:layout_height="wrap_content"
                            android:text="@string/year"
                            android:textColor="@color/darkPrimary"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/year"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/darkPrimary" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="@dimen/default_margin"
                        android:layout_marginRight="@dimen/default_margin"
                        android:orientation="horizontal"
                        android:paddingBottom="@dimen/default_margin"
                        android:paddingTop="@dimen/default_margin_half">

                        <TextView
                            android:layout_width="80dp"
                            android:layout_height="wrap_content"
                            android:text="@string/imdbRating"
                            android:textColor="@color/darkPrimary"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/imdb"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/darkPrimary" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/plot"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/default_margin"
                        android:layout_marginBottom="30dp"
                        android:lineSpacingMultiplier="1.4"
                        android:textColor="@color/darkPrimary" />
                </LinearLayout>
            </LinearLayout>
        </android.support.v4.widget.NestedScrollView>

        <view
            android:id="@+id/btnSpin"
            class="mbanje.kurt.fabbutton.FabButton"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_margin="16dp"
            android:clickable="true"
            android:color="@android:color/holo_red_light"
            android:indeterminate="true"
            android:max="100"
            android:src="@drawable/ic_fab_play"
            app:fbb_autoStart="true"
            app:fbb_endBitmap="@drawable/ic_fab_complete"
            app:fbb_hideProgressOnComplete="true"
            app:fbb_progressColor="#00ffff"
            app:fbb_progressWidthRatio="0.1"
            app:fbb_showEndBitmap="false"
            app:fbb_showShadow="true"
            app:layout_anchor="@id/appBarLayout"
            app:layout_anchorGravity="bottom|right|end" />
    </android.support.design.widget.CoordinatorLayout>

    <LinearLayout
        android:layout_width="30dp"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginLeft="10dp"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/btnClose"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_close_white" />
    </LinearLayout>
</RelativeLayout>